--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -84,8 +84,9 @@ $colors: (
 // Fonts
 // --------------------------------------------------
 
-@import "roboto";
-@import "noto-sans";
+//@import "roboto";
+//@import "noto-sans";
+@import "fonts";
 
 
 
