--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -8,7 +8,7 @@ page-home {
     padding: 16px;
     color: white;
     border-radius: 16px;
-    background-color: $theme-color-yellow;
+    background-color: $skin-yellow-color;
   }
 
 
